--- a/bin/main/static/template/userregistration.html
+++ b/bin/main/static/template/userregistration.html
@@ -17,7 +17,7 @@
                             Name
                         </label>
                         <div class="col-md-7">
-                            <input type="type" ng-model="user.name"
+                            <input type="text" ng-model="user.name"
                                    id="uname" class="form-control input-sm"
                                    placeholder="Enter user name" />
                         </div>
@@ -29,7 +29,7 @@
                             Address
                         </label>
                         <div class="col-md-7">
-                            <input type="type" ng-model="user.address"
+                            <input type="text" ng-model="user.address"
                                    id="address" class="form-control input-sm"
                                    placeholder="Enter User Address" />
                         </div>
@@ -41,7 +41,7 @@
                             Email
                         </label>
                         <div class="col-md-7">
-                            <input type="type" ng-model="user.email"
+                            <input type="email" ng-model="user.email"
                                    id="email" class="form-control input-sm"
                                    placeholder="Enter User Email" />
                         </div>
