--- a/src/main/resources/static/template/listuser.html
+++ b/src/main/resources/static/template/listuser.html
@@ -22,7 +22,7 @@
                         <td>{{user.address}}</td>
                         <td>
                             <button type="button"
-                                    ng-click="editUser(user.id"
+                                    ng-click="editUser(user.id)"
                                     class="btn btn-primary custom-width">
                                 <span class="glyphicon glyphicon-edit"></span>
                                 Edit
@@ -30,7 +30,7 @@
                         </td>
                         <td>
                             <button type="button"
-                                    ng-click="deleteUser(user.id"
+                                    ng-click="deleteUser(user.id)"
                                     class="btn btn-danger custom-width">
                                 <span class="glyphicon glyphicon-remove"></span>
                                 Delete
